--- a/evacursos-jr/src/views/index.html.ejs
+++ b/evacursos-jr/src/views/index.html.ejs
@@ -1,6 +1,2 @@
-<h1>Hello world</h1>
-<p>
-  App web version
-  <%= appVersion %>
-</p>
+<h1>Evacursos Jr</h1>
 <div id="react-app">Here a React app will be rendered</div>
