--- a/evacursos-jr/src/views/index.html.ejs
+++ b/evacursos-jr/src/views/index.html.ejs
@@ -1,3 +1,4 @@
 <h1>Evacursos Jr</h1>
+<p>La siguiente aplicación solamente consume una pequeña fracción de la API expuesta por Evacursos</p>
 <p> Recuerda que para usar Evacursos Jr debes haber creado previamente una clave en Evacursos</p>
 <div id="react-app">Here a React app will be rendered</div>
